--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="An online platform to share reviews about your favorite artists/bands.">
+  <meta name="keywords" content="Vibe, Review, Music, Songs, Song, Artists, Artist">
+  <title></title>
+  <!-- Fontawesome script -->
+  <script src="https://kit.fontawesome.com/3581b492d4.js" crossorigin="anonymous"></script>
+  <!-- Bootstrap v5.3 styling -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"
+    type="text/css">
+  <!-- Application CSS styling -->
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
+  {% block styles %}
+  {% endblock %}
 </head>
 <body>
-    
+    <title>Document</title>
+
+
+  <!-- Bootstrap standard JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+  </script>
+  <!-- Application JS -->
+  <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+
+    {% block scripts %}
+    {% endblock %}
 </body>
 </html>
