--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music Reviews</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
     <h1>Music Reviews</h1>
     {% for review in reviews %}
         <div>
@@ -16,5 +10,4 @@
             <hr>
         </div>
     {% endfor %}
-</body>
-</html>
+{% endblock %}
