--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="An online platform to share reviews about your favorite artists/bands.">
   <meta name="keywords" content="Vibe, Review, Music, Songs, Song, Artists, Artist">
-  <title></title>
+  <title>Vibe Verdicts</title>
   <!-- Fontawesome script -->
   <script src="https://kit.fontawesome.com/3581b492d4.js" crossorigin="anonymous"></script>
   <!-- Bootstrap v5.3 styling -->
@@ -19,17 +18,69 @@
   {% endblock %}
 </head>
 <body>
-    <title>Document</title>
 
+<header>
+    <!-- Responsive navigation -->
+    <nav class="navbar navbar-expand-md bg-dark border-bottom border-body" data-bs-theme="dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{{ url_for('index') }}">
+                <img src="{{ url_for('static', filename='images/vibeverdictslogo.png') }}" id="logo" alt="Vibe Verdicts logo">
+                <!-- Replace 'vibeverdictslogo.png' with your own logo file -->
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-nav" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('index') }}">Home</a>
+                    </li>
+                    {% if session.user %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('get_reviews') }}">Reviews</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('new_review') }}">New Review</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('profile', username=session['user']) }}">Profile</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-bs-toggle="modal" data-bs-target="#logoutModal" href="#">Log Out</a>
+                        <div class="modal fade" id="logoutModal" tabindex="-1" aria-labelledby="logoutModal" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <span class="modal-title fs-5" id="logoutModalTitle">Please confirm</span>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        Are you sure you want to log out?
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Go back</button>
+                                        <a href="{{ url_for('logout') }}" class="btn btn-danger">Logout</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
 
-  <!-- Bootstrap standard JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-  </script>
-  <!-- Application JS -->
-  <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+<!-- Bootstrap standard JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+</script>
+<!-- Application JS -->
+<script src="{{ url_for('static', filename='js/script.js') }}"></script>
 
-    {% block scripts %}
-    {% endblock %}
+{% block scripts %}
+{% endblock %}
 </body>
 </html>
