--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,3 @@
-body {
-    background-color: red;
-}
+/* Import Google font */
+
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
