--- a/templates/base.html
+++ b/templates/base.html
@@ -73,6 +73,25 @@
     </nav>
 </header>
 
+  <!-- Flash messages -->
+  {% with messages = get_flashed_messages() %}
+  {% if messages %}
+  {% for message in messages %}
+  <div class="container-fluid">
+    <div class="row flashes-container">
+      <div class="col">
+        <p class="text-center flash-text">{{ message }}</p>
+      </div>
+    </div>
+  </div>
+  {% endfor %}
+  {% endif %}
+  {% endwith %}
+
+  <!-- All block content -->
+  {% block content %}
+  {% endblock %}
+
 <!-- Bootstrap standard JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
