--- a/templates/base.html
+++ b/templates/base.html
@@ -60,12 +60,19 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Go back</button>
                                         <a href="{{ url_for('logout') }}" class="btn btn-danger">Logout</a>
+                                      </div>
                                     </div>
+                                  </div>
                                 </div>
-                            </div>
-                        </div>
-                    </li>
-                    {% endif %}
+                              </li>
+                              {% else %}
+                              <li class="nav-item">
+                                <a class="nav-link" href="{{ url_for('login') }}">Log In</a>
+                              </li> 
+                              <li class="nav-item">
+                                <a class="nav-link" href="{{ url_for('register') }}">Register</a>
+                              </li>
+                              {% endif %}
                 </ul>
             </div>
         </div>
