Remove reviews section as causing issues.

--- a/templates/base.html
+++ b/templates/base.html
@@ -37,10 +37,10 @@
                     </li>
                     {% if session.user %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('get_reviews') }}">Reviews</a>
+                        <a class="nav-link">Reviews</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('new_review') }}">New Review</a>
+                        <a class="nav-link">New Review</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('profile', username=session['user']) }}">Profile</a>
