--- a/templates/base.html
+++ b/templates/base.html
@@ -98,6 +98,33 @@
   {% block content %}
   {% endblock %}
 
+   <!-- Footer -->
+   <footer>
+    <div class="container-md text-center">
+      <div class="row footer-first-row">
+        <div class="col-sm">
+          <p class="text-uppercase footer-heading">Have a question? Get in touch</p>
+          <p class="white-link"><a href="mailto:admin@vibeverdicts.com"><i class="fa-solid fa-envelope"></i>
+              admin@vibeverdicts.com</a></p>
+        </div>
+        <div class="col-sm">
+          <p class="text-uppercase footer-heading">For the groupies</p>
+          <a href="https://www.facebook.com/" target="_blank" aria-label="Facebook (opens in a new tab)"><i
+              class="fa-brands fa-facebook-f footer-social-icon"></i></a>
+          <a href="https://www.instagram.com/" target="_blank" aria-label="Instagram (opens in a new tab)"><i
+              class="fa-brands fa-instagram footer-social-icon"></i></a>
+          <a href="https://www.twitter.com/" target="_blank" aria-label="Youtube (opens in a new tab)"><i
+              class="fa-brands fa-x-twitter footer-social-icon"></i></a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm copyright">
+          <p><em>&copy; 2024 Vibe Verdicts</em></p>
+        </div>
+      </div>
+    </div>
+  </footer>
+
 <!-- Bootstrap standard JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
