--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,17 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>Music Reviews</h1>
-    {% for review in reviews %}
-        <div>
-            <h2>{{ review.album }} by {{ review.artist }}</h2>
-            <p><strong>Review:</strong> {{ review.review }}</p>
-            <p><strong>Rating:</strong> {{ review.rating }}</p>
-            <p><strong>Date:</strong> {{ review.review_date }}</p>
-            <hr>
-        </div>
-    {% endfor %}
+
+<!-- Welcome image -->
+<div class="p-4 mb-4 home-main-image text-center">
+    <div class="container-fluid home-main-image-text">
+        <h1>Welcome, Music Lover!</h1>
+        {% if session.user %}
+        <a href="{{ url_for('get_reviews') }}" class="btn btn-secondary btn-lg mt-2 remove-button-shadow">Browse Reviews</a>
+        {% else %}
+        <a href="{{ url_for('register') }}" class="btn btn-secondary btn-lg mt-2 remove-button-shadow">Register Here</a>
+        <p class="have-account">Have an account? <a href="{{ url_for('login') }}"><strong>Login here</strong></a></p>
+        {% endif %}
+    </div>
+</div>
+
 {% endblock %}
