--- a/static/css/style.css
+++ b/static/css/style.css
@@ -108,3 +108,12 @@ header {
 .form-text {
     font-style: italic;
 }
+
+/* Container styling used on review details page */
+
+#single-review-container {
+    max-width: 900px;
+    background-color: rgb(255, 255, 255, 1);
+    color: #000;
+    box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.2);
+}
