--- a/static/css/style.css
+++ b/static/css/style.css
@@ -117,3 +117,59 @@ header {
     color: #000;
     box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.2);
 }
+
+/* Remove Bootstrap background and border for card footer */
+
+.card-footer {
+    background-color: #fff;
+    border-top: none;
+    display: flex;
+}
+
+/* Footer styling */
+
+footer {
+    background-color: #212529;
+    color: #9a9d9e;
+    margin-top: auto;
+}
+
+.footer-heading {
+    color: #fff;
+}
+
+.footer-first-row {
+    padding-top: 1.5rem;
+}
+
+.footer-social-icon {
+    font-size: 1.5rem;
+    padding: 0rem 0.5rem;
+}
+
+.footer-social-icon:hover {
+    color: #fff;
+    transition: 0.4s;
+}
+
+footer a {
+    color: inherit !important;
+    text-decoration: none !important;
+}
+
+.white-link:hover {
+    color: #fff;
+    transition: 0.4s;
+}
+
+.copyright {
+    padding-top: 1rem;
+}
+
+/* Remove grey background from Bootstrap modals */
+
+.modal-content {
+    background-color: #fff;
+    --bs-modal-footer-border-color: #dee2e6;
+    --bs-modal-header-border-color: #dee2e6;
+}
