--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -30,5 +30,68 @@
             </div>
         </div>
     </form>
+      <!-- Show all reviews -->
+      <div class="row mb-5 justify-content-center">
+        {% if reviews|length != 0 %}
+        {% for review in reviews %}
+        <div class="col-lg-4 col-md-6 mb-3">
+            <div class="card h-100">
+                <div class="card-body d-flex flex-column">
+                    <h3 class="card-title">
+                        <strong>{{ review.review_title }}</strong>
+                        {% if review.explicit_language == "yes" %}
+                        <i class="fa-solid fa-triangle-exclamation" data-bs-toggle="tooltip" data-bs-placement="top"
+                            data-bs-custom-class="custom-tooltip" data-bs-title="Warning! Contains explicit language">
+                        </i>
+                        {% endif %}
+                    </h3>
+                    <p class="card-subtitle mb-1 text-body-secondary">A review of:</p>
+                    <h4 class="card-subtitle mb-2">{{ review.song_name }}, by
+                        {{ review.artist_name }},
+                        {{ review.genre_name }}</h4>
+                    <p class="card-text">
+                        Preview:
+                        {% if review.review_content|length > 90 %}
+                        {{ review.review_content|truncate(90, True) }}
+                        {% else %}
+                        {{ review.review_content}}
+                        {% endif %}
+                    </p>
+                    <p class="card-subtitle mb-2 mt-auto text-body-secondary">Author: {{ review.review_by }}</p>
+                </div>
+                <div class="card-footer">
+                    <a href="{{ url_for('review_details', review_id=review._id) }}" class="btn btn-secondary me-1">Read
+                        more</a>
+                    {% if session.user|lower == review.review_by|lower %}
+                    <!-- Show edit/delete buttons if review belongs to user -->
+                    <a href="{{ url_for('edit_review', review_id=review._id) }}" class="btn btn-success me-1">Edit</a>
+                    <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                        data-bs-target="#deleteModal{{ review._id }}">Delete</button>
+                    <div class="modal fade" id="deleteModal{{ review._id }}" tabindex="-1" aria-labelledby="deleteModal{{ review._id }}"
+                        aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <span class="modal-title fs-5" id="deleteModalTitle">Please confirm</span>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    Are you sure you want to delete your review of {{ review.song_name }} by
+                                    {{ review.artist_name }}?
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Go back</button>
+                                    <a href="{{ url_for('delete_review', review_id=review._id) }}" class="btn btn-danger">Delete Review</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+        {% else %}
 
     {% endblock %}
