Add explicit language dropdown function

--- a/templates/new_review.html
+++ b/templates/new_review.html
@@ -38,4 +38,14 @@
                     <label for="artist-name" class="form-label">Artist Name</label>
                     <input type="text" class="form-control" id="artist-name" name="artist_name" maxlength="60" required>
                 </div>
+                <!-- explicit language dropdown -->
+                <div class="mb-3">
+                    <i class="fa-solid fa-triangle-exclamation"></i>
+                    <label for="explicit-language">Does this song include explicit language?</label>
+                    <select class="form-select" id="explicit-language" name="explicit_language" required>
+                        <option value="" disabled selected>Please select an answer...</option>
+                        <option value="yes">Yes</option>
+                        <option value="no">No</option>
+                    </select>
+                </div>
 {% endblock %}
