Add submit button

--- a/templates/new_review.html
+++ b/templates/new_review.html
@@ -63,4 +63,14 @@
                     <textarea class="form-control" id="review-content" name="review_content" rows="4"
                         required></textarea>
                 </div>
+                <!-- submit button -->
+                <div class="d-grid gap-2">
+                    <button type="submit" class="btn btn-secondary">
+                        Submit Review <i class="fa-solid fa-bolt"></i>
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 {% endblock %}
