Added container and content to index

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,4 +14,18 @@
     </div>
 </div>
 
+<div class="container">
+    <!-- Vibe Verdicts explanation -->
+    <div class="row mb-3 justify-content-center">
+        <div class="col-lg-10 text-center">
+            <h2>What is Vibe Verdicts?</h2>
+            <p class="text-center">Vibe Verdicts is a friendly, online community where you can share your music
+                reviews, suggestions
+                and criticisms. Have something to say about a particular song? This is the place to be!</p>
+            <p>To view and create reviews, you'll need to register an account above. Then you'll unlock the full
+                features of the site.</p>
+        </div>
+    </div>
+    <hr>
+
 {% endblock %}
