Add 3 random reviews code to use index and display on the home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,5 +27,60 @@
         </div>
     </div>
     <hr>
+     <!-- Three random reviews from database -->
+     <div class="container mt-4">
+        <div class="row mb-3 justify-content-center">
+            <div class="text-center">
+                <h2>Recent Reviews</h2>
+            </div>
+        </div>
+    </div>
+    <div class="row mb-5 justify-content-center">
+        {% if reviews|length != 0 %}
+        {% for review in reviews %}
+        <div class="col-lg-4 col-md-6 mb-3">
+            <div class="card h-100">
+                <div class="card-body d-flex flex-column">
+                    <h3 class="card-title">
+                        <strong>{{ review.review_title }}</strong>
+                        {% if review.explicit_language == "yes" %}
+                        <i class="fa-solid fa-triangle-exclamation" data-bs-toggle="tooltip" data-bs-placement="top"
+                            data-bs-custom-class="custom-tooltip" data-bs-title="Warning! Contains explicit language">
+                        </i>
+                        {% endif %}
+                    </h3>
+                    <p class="card-subtitle mb-1 text-body-secondary">A review of:</p>
+                    <h4 class="card-subtitle mb-2">{{ review.song_name }}, by
+                        {{ review.artist_name }},
+                        {{ review.genre_name }}</h4>
+                    <p class="card-text">
+                        Preview:
+                        {% if review.review_content|length > 90 %}
+                        {{ review.review_content|truncate(90, True) }}
+                        {% else %}
+                        {{ review.review_content}}
+                        {% endif %}
+                    </p>
+                    <p class="card-subtitle text-body-secondary mt-auto">Author: {{ review.review_by }}</p>
+                </div>
+                {% if session.user %}
+                <div class="card-footer">
+                    <a href="{{ url_for('review_details', review_id=review._id) }}" class="btn btn-secondary">Read
+                        more</a>
+                </div>
+                {% endif %}
+            </div>
+        </div>
+        {% endfor %}
+        {% else %}
+        <div class="col-lg-10 text-center">
+            <p>No reviews have been posted yet.</p>
+            {% if session.user %}
+            <a href="{{ url_for('new_review') }}" class="btn btn-secondary">Post the frst review</a>
+            {% endif %}
+        </div>
+        {% endif %}
+    </div>
+</div>
 
 {% endblock %}
