--- a/templates/profile.html
+++ b/templates/profile.html
@@ -15,5 +15,11 @@
             </p>
         </div>
     </div>
+     <!-- Users reviews section -->
+     <div class="row justify-content-center">
+        <div class="col mb-2 text-center">
+            <h2>Your Reviews</h2>
+        </div>
+    </div>
 
 {% endblock %}
