--- a/templates/profile.html
+++ b/templates/profile.html
@@ -21,5 +21,34 @@
             <h2>Your Reviews</h2>
         </div>
     </div>
+    <div class="row mb-5 justify-content-center">
+        {% if user_reviews|length != 0 %}
+        {% for review in user_reviews %}
+        <div class="col-lg-4 col-md-6 mb-3">
+            <div class="card h-100">
+                <div class="card-body d-flex flex-column">
+                    <h3 class="card-title">
+                        <strong>{{ review.review_title }}</strong>
+                        {% if review.explicit_language == "yes" %}
+                        <i class="fa-solid fa-triangle-exclamation" data-bs-toggle="tooltip" data-bs-placement="top"
+                            data-bs-custom-class="custom-tooltip" data-bs-title="Warning! Contains explicit language">
+                        </i>
+                        {% endif %}
+                    </h3>
+                    <p class="card-subtitle mb-1 text-body-secondary">A review of:</p>
+                    <h4 class="card-subtitle mb-2">{{ review.song_name }}, by
+                        {{ review.artist_name }},
+                        {{ review.genre_name }}</h4>
+                    <p class="card-text">
+                        Preview:
+                        {% if review.review_content|length > 90 %}
+                        {{ review.review_content|truncate(90, True) }}
+                        {% else %}
+                        {{ review.review_content}}
+                        {% endif %}
+                    </p>
+                    <p class="card-subtitle mb-2 mt-auto text-body-secondary">Author: {{ review.review_by }}</p>
+
+                </div>
 
 {% endblock %}
