Added favicon link to base html

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,8 @@
   <meta name="description" content="An online platform to share reviews about your favorite artists/bands.">
   <meta name="keywords" content="Vibe, Review, Music, Songs, Song, Artists, Artist">
   <title>Vibe Verdicts</title>
+  <!-- Fav icon -->
+  <link rel="icon" type="image/x-icon" href="../static/images/fav.png.ico">
   <!-- Fontawesome script -->
   <script src="https://kit.fontawesome.com/3581b492d4.js" crossorigin="anonymous"></script>
   <!-- Bootstrap v5.3 styling -->
